--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "snowflake",
         "sdk",
         "database",
-        "service",
         "php",
         "api"
     ],
@@ -22,14 +21,14 @@
     "type": "library",
     "require": {
         "php": "^8.1",
-        "web-token/jwt-core": "^2|^3",
-        "web-token/jwt-key-mgmt": "^2|^3",
-        "web-token/jwt-signature": "^2|^3",
-        "web-token/jwt-signature-algorithm-rsa": "^2|^3",
-        "symfony/http-client": "^5.3|^6.0"
+        "web-token/jwt-core": "^3",
+        "web-token/jwt-key-mgmt": "^3",
+        "web-token/jwt-signature": "^3",
+        "web-token/jwt-signature-algorithm-rsa": "^3",
+        "symfony/http-client": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
