--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,8 @@
     "type": "library",
     "require": {
         "php": "^8.1",
-        "web-token/jwt-core": "^3",
-        "web-token/jwt-key-mgmt": "^3",
-        "web-token/jwt-signature": "^3",
-        "web-token/jwt-signature-algorithm-rsa": "^3",
-        "symfony/http-client": "^6.0"
+        "symfony/http-client": "^6|^7",
+        "web-token/jwt-library": "^3|^4"
     },
     "require-dev": {
         "phpunit/phpunit": "^10",
